test/langtools/tools/javac/nested/StaticNestedNonStaticSuper.out
StaticNestedNonStaticSuper.java:10:23: compiler.err.no.encl.instance.of.type.in.scope: StaticNestedNonStaticSuper
1 error
